# agent

./: .gitignore  .mcp.json  AGENTS.md  Cargo.toml  Makefile  Procfile.dev  README.md  mcp-compose.yaml  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.cursor/: mcp.json
.github/workflows/: ci.yml
blocks/com.acme.hello/: Cargo.toml  README.md  block.yaml
blocks/com.acme.wasm-demo/: Cargo.toml  README.md  block.yaml
clients/: README.md
clients/contracts/: README.md
crates/ai-runner/: Cargo.toml
crates/ai-runner/src/: defaults.rs  lib.rs  registry.rs  runner.rs  types.rs
crates/ai-runner/src/runners/: anthropic.rs  claude.rs  codex.rs  mod.rs  openai.rs
crates/audit/: Cargo.toml
crates/auth/: Cargo.toml
crates/auth-zitadel/: Cargo.toml
crates/auth-zitadel/src/: config.rs  deny_list.rs  error.rs  jwks.rs  lib.rs  provider.rs
crates/auth-zitadel/tests/: verify.rs
crates/auth/src/: dev_null.rs  lib.rs  provider_cell.rs  schema.rs  static_token.rs
crates/blocks-host/: Cargo.toml
crates/blocks-host/src/: host.rs  lib.rs  manifest.rs  proxy.rs  registry.rs  scope.rs  supervisor.rs  wasm.rs
crates/blocks-host/tests/: wasm_fixture.rs
crates/blocks-sdk/: Cargo.toml
crates/blocks-sdk-macros/: Cargo.toml
crates/blocks-sdk/src/: ctx.rs  lib.rs  node.rs  prelude.rs  process.rs  requires.rs  wasm.rs
crates/config/: Cargo.toml
crates/config/src/: error.rs  lib.rs  loader.rs  model.rs  role.rs
crates/config/tests/: precedence.rs
crates/dashboard-nodes/: Cargo.toml
crates/dashboard-nodes/manifests/: nav.yaml  page.yaml  template.yaml  widget.yaml
crates/dashboard-nodes/src/: contract.rs  lib.rs
crates/dashboard-runtime/: Cargo.toml
crates/dashboard-runtime/src/: binding.rs  cache.rs  lib.rs  reader.rs  stack.rs
crates/dashboard-transport/: Cargo.toml
crates/dashboard-transport/src/: acl.rs  action.rs  audit.rs  binding_walk.rs  compose.rs  error.rs  handler_registry.rs  invalidate.rs  lib.rs  limits.rs  nav.rs  reader.rs  render.rs  resolve.rs  state.rs  table.rs  vocabulary.rs  widget_registry.rs
crates/dashboard-transport/tests/: falsification.rs  handlers.rs  limits.rs
crates/data-artifacts-local/: Cargo.toml  README.md
crates/data-artifacts-local/src/: lib.rs
crates/data-artifacts-s3/: Cargo.toml  README.md
crates/data-artifacts-s3/src/: lib.rs
crates/data-backup/: Cargo.toml
crates/data-backup/src/: bundle.rs  error.rs  lib.rs  sqlite.rs
crates/data-repos/: Cargo.toml
crates/data-repos/src/: device_repo.rs  error.rs  flow_repo.rs  flow_revision_repo.rs  graph_repo.rs  history_repo.rs  lib.rs  preferences_repo.rs  testing.rs
crates/data-sqlite/: Cargo.toml
crates/data-sqlite/src/: connection.rs  error.rs  flow_revision_repo.rs  graph_repo.rs  history_repo.rs  lib.rs  migrations.rs  preferences_repo.rs
crates/data-sqlite/tests/: repo.rs
crates/domain-ai/: Cargo.toml
crates/domain-ai/manifests/: ai_run.yaml
crates/domain-ai/src/: ai_run.rs  lib.rs  runtime.rs
crates/domain-artifacts/: Cargo.toml  README.md
crates/domain-artifacts/src/: cache.rs  distribute.rs  keys.rs  lib.rs  verify.rs
crates/domain-auth/: Cargo.toml
crates/domain-auth/manifests/: setup.yaml  tenant.yaml  user.yaml
crates/domain-auth/src/: error.rs  kinds.rs  lib.rs  setup.rs
crates/domain-backup/: Cargo.toml
crates/domain-backup/src/: config.rs  error.rs  export.rs  lib.rs  restore.rs  template.rs
crates/domain-compute/: Cargo.toml
crates/domain-compute/manifests/: count.yaml  math_add.yaml  pluck.yaml
crates/domain-compute/src/: count.rs  lib.rs  math_add.rs  pluck.rs
crates/domain-compute/tests/: dispatch.rs
crates/domain-flows/: Cargo.toml
crates/domain-flows/src/: lib.rs  scope.rs
crates/domain-function/: Cargo.toml
crates/domain-function/manifests/: function.yaml
crates/domain-function/src/: cache.rs  convert.rs  error.rs  function.rs  helpers.rs  lib.rs
crates/domain-function/tests/: function.rs
crates/domain-history/: Cargo.toml
crates/domain-history/src/: config.rs  historizer.rs  lib.rs  policy.rs  query.rs
crates/domain-history/tests/: query.rs
crates/domain-logic/: Cargo.toml
crates/domain-logic/manifests/: heartbeat.yaml  trigger.yaml
crates/domain-logic/src/: heartbeat.rs  lib.rs  trigger.rs
crates/domain-logic/tests/: dispatch.rs
crates/engine/: Cargo.toml
crates/engine/manifests/: flow.yaml  read_slot.yaml  write_slot.yaml
crates/engine/src/: behavior.rs  engine.rs  error.rs  kinds.rs  lib.rs  live_wire.rs  queue.rs  safe_state.rs  scheduler.rs  state.rs
crates/engine/tests/: kinds_snapshot.rs  live_wire.rs
crates/extensions-host/: Cargo.toml
crates/extensions-host/src/: host.rs  lib.rs  manifest.rs  registry.rs  supervisor.rs  wasm.rs
crates/extensions-sdk/: Cargo.toml
crates/extensions-sdk-macros/: Cargo.toml
crates/extensions-sdk-macros/src/: attrs.rs  lib.rs  manifest.rs
crates/extensions-sdk/src/: error.rs  lib.rs  node.rs  prelude.rs  process.rs  settings.rs  wasm.rs
crates/graph/: Cargo.toml
crates/graph/manifests/: driver_demo.yaml  driver_demo_device.yaml  driver_demo_point.yaml  folder.yaml  math_add.yaml  station.yaml
crates/graph/src/: containment.rs  error.rs  event.rs  ids.rs  kind.rs  lib.rs  lifecycle.rs  link.rs  node.rs  patch.rs  persist.rs  placement.rs  search.rs  seed.rs  slot.rs  store.rs
crates/graph/src/kinds/: dto.rs  mod.rs  schema.rs  scope.rs
crates/graph/src/links/: dto.rs  mod.rs  schema.rs  scope.rs
crates/graph/src/nodes/: dto.rs  mod.rs  schema.rs  scope.rs
crates/graph/tests/: contract_fixtures_events.rs  ingest_units.rs  persistence.rs  placement.rs  rename.rs  seed_snapshot.rs  writable_guard.rs
crates/observability/: Cargo.toml
crates/observability/src/: error.rs  fields.rs  init.rs  lib.rs  prelude.rs  redact.rs  span.rs
crates/observability/tests/: contract.rs  init.rs  no_println.rs  redact.rs
crates/observability/tests/fixtures/log/: event_full.json  event_minimal.json  event_redacted.json
dev/: README.md  cloud.yaml  edge.yaml  run.sh  single.yaml
docs/: NEXT.md
docs/design/: AI.md  (+36 more)
(+227 files in other folders)
