[workspace]
resolver = "2"
members = [
    "crates/spi",
    "crates/query",
    "crates/auth",
    "crates/messaging",
    "crates/audit",
    "crates/observability",
    "crates/config",
    "crates/data-entities",
    "crates/data-repos",
    "crates/data-sqlite",
    "crates/data-postgres",
    "crates/data-tsdb",
    "crates/domain-compute",
    "crates/domain-logic",
    "crates/domain-flows",
    "crates/domain-devices",
    "crates/domain-blocks",
    "crates/domain-tags",
    "crates/domain-presentation",
    "crates/domain-fleet",
    "crates/domain-history",
    "crates/dashboard-nodes",
    "crates/dashboard-runtime",
    "crates/dashboard-transport",
    "crates/ui-ir",
    "crates/transport-rest",
    "crates/transport-grpc",
    "crates/transport-nats",
    "crates/transport-fleet-zenoh",
    "crates/transport-cli",
    "crates/transport-mcp",
    "crates/graph",
    "crates/engine",
    "crates/blocks-sdk",
    "crates/blocks-sdk-macros",
    "crates/blocks-host",
    "crates/apps/agent",
    "crates/apps/mcp-sync",
    "crates/ai-runner",
    "crates/domain-ai",
    "clients/rs",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
# Shared internal crates — referenced via `workspace = true` in member manifests.
spi = { path = "crates/spi" }
query = { path = "crates/query" }
auth = { path = "crates/auth" }
messaging = { path = "crates/messaging" }
audit = { path = "crates/audit" }
observability = { path = "crates/observability" }
config = { path = "crates/config" }

data-entities = { path = "crates/data-entities" }
data-repos = { path = "crates/data-repos" }
data-sqlite = { path = "crates/data-sqlite" }
data-postgres = { path = "crates/data-postgres" }
data-tsdb = { path = "crates/data-tsdb" }
domain-compute = { path = "crates/domain-compute" }
domain-logic = { path = "crates/domain-logic" }
domain-flows = { path = "crates/domain-flows" }
domain-devices = { path = "crates/domain-devices" }
domain-blocks = { path = "crates/domain-blocks" }
domain-tags = { path = "crates/domain-tags" }
domain-presentation = { path = "crates/domain-presentation" }
domain-fleet = { path = "crates/domain-fleet" }
domain-history = { path = "crates/domain-history" }
dashboard-nodes = { path = "crates/dashboard-nodes" }
dashboard-runtime = { path = "crates/dashboard-runtime" }
dashboard-transport = { path = "crates/dashboard-transport" }
ui-ir = { path = "crates/ui-ir" }
transport-rest = { path = "crates/transport-rest" }
transport-grpc = { path = "crates/transport-grpc" }
transport-nats = { path = "crates/transport-nats" }
transport-fleet-zenoh = { path = "crates/transport-fleet-zenoh" }
transport-cli = { path = "crates/transport-cli" }
transport-mcp = { path = "crates/transport-mcp" }
graph = { path = "crates/graph" }
engine = { path = "crates/engine" }
ai-runner = { path = "crates/ai-runner" }
domain-ai = { path = "crates/domain-ai" }
blocks-sdk = { path = "crates/blocks-sdk" }
blocks-sdk-macros = { path = "crates/blocks-sdk-macros" }
blocks-host = { path = "crates/blocks-host" }
agent-client = { path = "clients/rs" }

# Third-party.
async-trait = "0.1"
thiserror = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "net", "process", "time", "io-util"] }
tonic = { version = "0.12", default-features = false, features = ["transport", "codegen", "prost"] }
tonic-build = { version = "0.12", default-features = false, features = ["prost", "transport"] }
prost = "0.13"
process-wrap = { version = "8", default-features = false, features = ["tokio1", "kill-on-drop", "process-group", "job-object"] }
wasmtime = { version = "26", default-features = false, features = ["runtime", "cranelift"] }
clap = { version = "4", features = ["derive", "env"] }
serde_yml = "0.0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
axum = { version = "0.7" }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
uuid = { version = "1", features = ["v4", "serde"] }
schemars = { version = "0.8", features = ["derive"] }
semver = { version = "1", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
unwrap_used = "warn"
panic = "warn"
todo = "warn"
