[package]
name = "ai-runner"
description = "Unified AI runner — CLI (claude-wrapper, codex) and REST (anthropic-ai-sdk, async-openai)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
# Workspace
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["process", "io-util"] }
tracing.workspace = true
futures-util.workspace = true

# Claude Code CLI wrapper
claude-wrapper = "0.5.1"

# Anthropic REST API
anthropic-ai-sdk = "0.2.27"

# OpenAI REST API
async-openai = { version = "0.35.0", features = ["chat-completion"] }
