[package]
name = "auth-zitadel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
spi = { workspace = true }
auth = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "fs", "rt", "macros"] }
tracing = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
arc-swap = { workspace = true }
uuid = { workspace = true, features = ["v4", "v5", "serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "sync", "fs"] }
tempfile = "3"
rsa = "0.9"
# rsa 0.9 pulls rand_core 0.6; we depend on it directly here so the
# test can call `OsRng` without pinning the workspace's `rand` version.
rand_core = { version = "0.6", features = ["std"] }
base64 = "0.22"
async-trait = { workspace = true }
