[package]
name = "auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = ["dev-null", "static-token"]
dev-null = []
static-token = []

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
spi = { workspace = true }
tracing = { workspace = true }
query = { workspace = true }
arc-swap = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
