[package]
name = "blocks-host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
spi = { workspace = true }
graph = { workspace = true }
engine = { workspace = true }
query = { workspace = true }
blocks-sdk = { workspace = true }
transport-grpc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tower = "0.5"
hyper-util = { version = "0.1", features = ["tokio"] }
process-wrap = { workspace = true }
tokio-util = "0.7"
wasmtime = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
tokio-stream = { workspace = true, features = ["net"] }
futures-core = "0.3"
# Pure-Rust WAT→wasm assembler. Lets integration tests bake a tiny
# hand-written module into the binary without requiring a wasm
# toolchain on CI.
wat = "1"
