[package]
name = "config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
auth = { workspace = true }
serde = { workspace = true }
serde_yml = { workspace = true }
spi = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
