[package]
name = "data-artifacts-s3"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

# S3-compatible ArtifactStore impl. Target backends: Garage
# (self-hosted reference), Cloudflare R2, AWS S3, Backblaze B2.
#
# This crate is compiled out by default — the parent agent enables it
# via the `artifacts-s3` feature. Standalone builds do not link
# object_store or any S3 SDK.
[features]
default = []

[dependencies]
spi = { workspace = true }
async-trait = { workspace = true }
bytes = "1"
futures-core = "0.3"
futures-util = { workspace = true }
object_store = { version = "0.11", features = ["aws"] }
serde = { workspace = true, features = ["derive"] }
thiserror = "1"
tokio = { workspace = true, features = ["sync", "time", "rt"] }
tracing = { workspace = true }
url = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
