[package]
name = "data-sqlite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
data-entities = { workspace = true }
data-repos = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
data-repos = { workspace = true, features = ["testing"] }
tempfile = "3"
