[package]
name = "domain-compute"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
spi = { workspace = true }
extensions-sdk = { workspace = true }
graph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
engine = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "sync"] }
serde_yml = { workspace = true }
