[package]
name = "domain-history"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
spi = { workspace = true }
graph = { workspace = true }
data-repos = { workspace = true }
data-tsdb = { workspace = true }
blocks-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
data-sqlite = { workspace = true }
engine = { workspace = true }
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time", "test-util", "sync"] }
