[package]
name = "domain-logic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
spi = { workspace = true }
blocks-sdk = { workspace = true }
graph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
engine = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time", "test-util", "sync"] }
