[package]
name = "extensions-sdk-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
spi = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
serde_yml = { workspace = true }
serde_json = { workspace = true }
